# multiagentic_rag-public

./: News_Chat_Demo.ipynb  README.md  colab_setup.py  pyproject.toml  pytest.ini
multirag/: __init__.py  agents.py  cfg.py  engine.py
multirag/prompts/: article_retriever_system_prompt.txt  chat_system_prompt.txt  manager_system_prompt.txt  news_retriever_system_prompt.txt
multirag/utils/: cache.py
tests/: test_agents.py  test_api.py
