[build-system]
requires = ["setuptools", "setuptools-scm"]
requires-python = ">=3.12"
build-backend = "setuptools.build_meta"

[project]
name = "multiagentic-rag"
version = "0.0.1"

dependencies = [
    "torch>=2.0.0",
    "transformers[agents]>=4.37.0",
    "accelerate",
    "sentencepiece",
    "bitsandbytes",
    "langchain-community",
    "langchain-huggingface",
    "faiss-cpu",
    "newsapi-python",
    "python-dotenv",
    "pytest"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["multirag"]